WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
10990
REGRESSION: Pressing a pop-up's access key doesn't focus it
https://bugs.webkit.org/show_bug.cgi?id=10990
Summary
REGRESSION: Pressing a pop-up's access key doesn't focus it
mitz
Reported
2006-09-22 15:47:58 PDT
Pressing the access key for a pop-up should focus it, but in TOT it just highlights it momentarily. To reproduce, press Control-P on this page and watch the Product pop-up above.
Attachments
focus select element on accesskey press
(26.06 KB, patch)
2007-02-19 07:30 PST
,
Antti Koivisto
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephanie Lewis
Comment 1
2006-11-06 21:48:04 PST
radar 4823138
Antti Koivisto
Comment 2
2007-02-19 07:30:59 PST
Created
attachment 13236
[details]
focus select element on accesskey press
mitz
Comment 3
2007-02-19 07:45:49 PST
Comment on
attachment 13236
[details]
focus select element on accesskey press r=me. I don't think the comment needs to change, though.
Antti Koivisto
Comment 4
2007-02-19 07:55:09 PST
r19707
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug