LayoutTests:

Reviewed by Mitz.

        - test for http://bugs.webkit.org/show_bug.cgi?id=10990
          REGRESSION: Pressing a pop-up's access key doesn't focus it
          <rdar://problem/4823138>

        * fast/forms/select-accesskey-expected.checksum: Added.
        * fast/forms/select-accesskey-expected.png: Added.
        * fast/forms/select-accesskey-expected.txt: Added.
        * fast/forms/select-accesskey.html: Added.

WebCore:

        Reviewed by Mitz.

        - fix for http://bugs.webkit.org/show_bug.cgi?id=10990
          REGRESSION: Pressing a pop-up's access key doesn't focus it
          <rdar://problem/4823138>

        Focus the select element too in accessKeyAction.

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::accessKeyAction):



Canonical link: https://commits.webkit.org/16571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19707 268f45cc-cd09-0410-ab3c-d52691b4dbfc